feat: add Playwright-style npx support for MCP server
- Add dual bin entries: nodash-mcp-server and nodash-mcp
- Enable npx @nodash/mcp-server@latest usage like Playwright
- Add prepublishOnly script for automated builds
- Update README with comprehensive usage examples
- Add publishConfig for public npm registry
- Support both global and npx installation methods

Usage examples:
- npx @nodash/mcp-server@latest (recommended)
- npm install -g @nodash/mcp-server && nodash-mcp
- Local: npm install @nodash/mcp-server && npx nodash-mcp-server

MCP client configuration:
{
  "mcpServers": {
    "nodash": {
      "command": "npx",
      "args": ["@nodash/mcp-server@latest"]
    }
  }
}

--- a/packages/nodash-mcp-server/package.json
+++ b/packages/nodash-mcp-server/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "nodash-mcp-server": "dist/index.js"
+    "nodash-mcp-server": "dist/index.js",
+    "nodash-mcp": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "npm run build && npm start",
+    "prepublishOnly": "npm run build",
     "postinstall": "chmod +x dist/index.js || true"
   },
   "keywords": [
@@ -19,7 +21,8 @@
     "tracking",
     "ai",
     "ide",
-    "model-context-protocol"
+    "model-context-protocol",
+    "nodash"
   ],
   "author": "Nodash",
   "license": "MIT",
@@ -38,5 +41,8 @@
     "type": "git",
     "url": "https://github.com/nodash/nodash.git",
     "directory": "packages/nodash-mcp-server"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
