fix: add --verbose flag and recommendations to CLI analyze command
- Add --verbose flag to show detailed analysis information
- Add recommendations generation to ProjectAnalyzer with framework-specific guidance
- Update ProjectAnalysis type to include recommendations field
- Display recommendations in CLI output with installation and integration advice
- Show verbose details including project root, timestamp, and full dependency lists

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "npm run start-analytics",
     "start-analytics": "cd packages/nodash-analytics-server && npm start",
     "start-mcp": "cd packages/nodash-mcp-server && npm start",
-    "setup": "npm install && npm run build"
+    "setup": "npm install && npm run build",
+    "analyze": "node packages/nodash-cli/dist/cli.js analyze"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
