🧹 Major Cleanup: Clean Repository Structure & Proper Separation
✅ **Removed Unnecessary Components:**
- Deleted leftover analytics server artifacts and build files
- Removed development files that don't belong in public repo
- Cleaned up build artifacts (dist/, *.tsbuildinfo)
- Removed IDE files (.vscode/) and development data (.nodash/)

✅ **Clean Package Structure:**
- @nodash/sdk: Analytics SDK for runtime tracking
- @nodash/cli: Command-line analysis tool
- @nodash/mcp-server: MCP server for AI guidance

✅ **Updated Configuration:**
- Fixed package.json for public repository
- Proper repository URL and license (MIT)
- Added CLI package README
- Maintained comprehensive .gitignore

✅ **Result:**
- Clean separation of concerns
- Public repository contains only public packages
- No build artifacts or development files
- Proper documentation for all packages
- Ready for clean development workflow

This establishes a proper, maintainable structure for the public Nodash repository.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodash-dev",
+  "name": "nodash",
   "version": "1.0.0",
-  "description": "Private development infrastructure for the Nodash Analytics Platform",
+  "description": "Zero-configuration analytics platform with intelligent MCP integration",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -27,10 +27,18 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "keywords": [
+    "analytics", 
+    "mcp", 
+    "model-context-protocol", 
+    "sdk",
+    "zero-configuration",
+    "typescript"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nodash-ai/nodash-dev.git"
+    "url": "git+https://github.com/nodash-ai/nodash.git"
   },
   "author": "Nodash AI Inc.",
-  "license": "PROPRIETARY"
+  "license": "MIT"
 }
