--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -10,22 +12,9 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "node"
   },
-  "references": [
-    { "path": "./packages/nodash-analytics-server" },
-    { "path": "./packages/nodash-mcp-server" },
-    { "path": "./packages/nodash-sdk" }
-  ],
-  "files": [],
-  "exclude": [
-    "node_modules", 
-    "dist", 
-    "**/*.test.ts", 
-    "**/*.spec.ts",
-    "**/e2e/**",
-    "**/__tests__/**",
-    "**/jest.config.js",
-    "**/jest.e2e.config.js"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 } 
