--- a/packages/nodash-mcp-server/package.json
+++ b/packages/nodash-mcp-server/package.json
@@ -1,46 +1,62 @@
 {
   "name": "@nodash/mcp-server",
   "version": "1.0.0",
-  "description": "Nodash MCP Server - Analytics events management for IDE agents",
-  "type": "module",
+  "description": "Nodash MCP Server - Model Context Protocol integration for AI-assisted analytics",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
-    "nodash-mcp-server": "dist/index.js",
-    "nodash-mcp": "dist/index.js"
+    "nodash-mcp-server": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
+    "dev": "tsc --watch",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "npm run clean && npm run build",
     "start": "node dist/index.js",
-    "dev": "npm run build && npm start",
-    "prepublishOnly": "npm run build",
-    "postinstall": "chmod +x dist/index.js || true"
+    "test": "jest",
+    "lint": "eslint src --ext .ts",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "mcp",
-    "analytics",
-    "tracking",
-    "ai",
-    "ide",
     "model-context-protocol",
-    "nodash"
+    "ai",
+    "analytics",
+    "claude",
+    "llm",
+    "typescript"
   ],
-  "author": "Nodash",
+  "author": "Nodash Team",
   "license": "MIT",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.2",
-    "typescript": "^5.7.2"
-  },
-  "files": [
-    "dist/**/*",
-    "README.md"
-  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/nodash/nodash.git",
+    "url": "https://github.com/your-org/nodash.git",
     "directory": "packages/nodash-mcp-server"
+  },
+  "bugs": {
+    "url": "https://github.com/your-org/nodash/issues"
+  },
+  "homepage": "https://nodash.ai",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@nodash/sdk": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.0.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "publishConfig": {
     "access": "public"
