--- a/packages/nodash-sdk/tsconfig.json
+++ b/packages/nodash-sdk/tsconfig.json
@@ -1,33 +1,25 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "lib": ["ES2022", "DOM"],
-    "types": ["node"],
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020", "DOM"],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "resolveJsonModule": true
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": [
     "node_modules", 
     "dist", 
     "**/*.test.ts",
-    "**/*.spec.ts", 
-    "**/__tests__/**",
-    "**/jest.config.js"
-  ],
-  "references": [
-    { "path": "../nodash-sdk" }
+    "**/*.spec.ts",
+    "**/__tests__/**"
   ]
 } 
