--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.0.0",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.0.0"
   },
   "publishConfig": {
     "access": "public"
