--- a/packages/nodash-mcp-server/package.json
+++ b/packages/nodash-mcp-server/package.json
@@ -12,7 +12,7 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit"
@@ -43,10 +43,10 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
     "@nodash/sdk": "^1.0.0"
   },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.15.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
