--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -6,14 +6,17 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "jest"
   },
   "dependencies": {
     "@nodash/api-interfaces": "^1.0.0",
+    "p-queue": "^8.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0",
+    "@types/p-queue": "^3.1.0",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5.0.0"
   },
   "files": [
