--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nodash/cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Nodash CLI for project analysis and AI-assisted analytics setup",
   "main": "dist/index.js",
   "type": "module",
@@ -11,7 +11,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src"
   },
   "keywords": [
     "analytics",
