--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@nodash/sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Nodash Analytics SDK - Runtime event tracking",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@nodash/api-interfaces": "^1.0.0",
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@types/p-queue": "^3.1.0",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.30.1",
     "typescript": "^5.0.0"
   },
   "files": [
