feat: Refactor architecture, migrate to Vitest, and simplify SDK

--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "jest": "^30.0.4",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.0.0"
+    "happy-dom": "^18.0.1",
+    "jsdom": "^24.0.0",
+    "typescript": "^5.0.0",
+    "vitest": "^1.2.2"
   },
   "publishConfig": {
     "access": "public"
