--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/cli.js",
-    "test": "jest",
+    "test": "vitest run",
     "lint": "eslint src"
   },
   "keywords": [
