--- a/packages/nodash-mcp/package.json
+++ b/packages/nodash-mcp/package.json
@@ -13,7 +13,7 @@
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "start": "node dist/server.js",
-    "test": "jest",
+    "test": "vitest run",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit"
   },
@@ -47,12 +47,10 @@
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.15.1",
-    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
-    "jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
   "engines": {
