--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "vitest run",
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest",
     "lint": "eslint src"
   },
   "dependencies": {
-    "@nodash/api-interfaces": "^1.0.0",
+    "@nodash/api-interfaces": "1.0.0",
     "p-queue": "^8.1.0",
     "uuid": "^9.0.0"
   },
