--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -10,9 +10,11 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "clean": "rm -rf dist",
     "start": "node dist/cli.js",
     "test": "vitest run",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "analytics",
@@ -29,7 +31,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.19.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.0.0",
+    "vitest": "^1.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
