--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -5,13 +5,14 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "vitest run",
     "build": "tsc",
     "dev": "tsc --watch",
-    "lint": "eslint src"
+    "clean": "rm -rf dist",
+    "test": "vitest run",
+    "lint": "eslint src",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@nodash/api-interfaces": "1.0.0",
     "p-queue": "^8.1.0",
     "uuid": "^9.0.0"
   },
@@ -23,6 +24,7 @@
     "eslint": "^9.30.1",
     "typescript": "^5.0.0"
   },
+  "type": "module",
   "files": [
     "dist/"
   ],
