--- a/packages/nodash-mcp/package.json
+++ b/packages/nodash-mcp/package.json
@@ -31,7 +31,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/your-org/nodash.git",
-    "directory": "packages/nodash-mcp-server"
+    "directory": "packages/nodash-mcp"
   },
   "bugs": {
     "url": "https://github.com/your-org/nodash/issues"
@@ -43,10 +43,10 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "@nodash/sdk": "^1.0.0"
+    "@modelcontextprotocol/sdk": "^1.0.0"
   },
   "devDependencies": {
+    "@nodash/sdk": "^1.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
