--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nodash/cli",
   "version": "1.0.1",
-  "description": "Nodash CLI for project analysis and AI-assisted analytics setup",
+  "description": "Comprehensive CLI for Nodash analytics platform with event tracking, metrics monitoring, and project analysis",
   "main": "dist/index.js",
   "type": "module",
   "bin": {
@@ -13,14 +13,21 @@
     "clean": "rm -rf dist",
     "start": "node dist/cli.js",
     "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint src",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
     "analytics",
     "cli",
-    "ai",
-    "mcp"
+    "monitoring",
+    "metrics",
+    "tracking",
+    "events",
+    "configuration",
+    "health-check",
+    "project-analysis",
+    "sdk"
   ],
   "author": "Nodash Team",
   "license": "MIT",
@@ -32,9 +39,15 @@
   "devDependencies": {
     "@types/node": "^20.19.2",
     "typescript": "^5.0.0",
-    "vitest": "^1.2.2"
+    "vitest": "^1.2.2",
+    "eslint": "^8.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "package.json"
+  ]
 }
