--- a/packages/nodash-mcp/package.json
+++ b/packages/nodash-mcp/package.json
@@ -13,7 +13,11 @@
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "start": "node dist/server.js",
-    "test": "vitest run",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:performance": "jest --testPathPattern=performance",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit"
   },
@@ -47,12 +51,14 @@
   },
   "devDependencies": {
     "@nodash/sdk": "^1.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
-    "typescript": "^5.0.0",
-    "vitest": "^1.2.2"
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
   },
   "type": "module",
   "engines": {
