feat: complete clean restart with SDK-first architecture
- Implement minimal SDK with dual CommonJS/ESM support for web compatibility
- Create developer-focused CLI that uses SDK exclusively
- Build MCP server for AI agents with bundled documentation
- Remove complex legacy code and focus on simplicity
- Add comprehensive documentation with humor for developers and AI agents
- Support independent npm package deployment
- Include integration tests and build-time documentation bundling

Architecture: SDK (foundation) → CLI (developer tools) → MCP (AI agents)
All packages can be deployed independently while maintaining clean boundaries.

--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "description": "Minimal SDK for nodash - the foundation layer",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "node scripts/build-dual.js",
     "dev": "tsc --watch"
   },
-  "keywords": ["nodash", "sdk", "analytics", "tracking"],
+  "keywords": ["nodash", "sdk", "analytics", "tracking", "web", "browser", "esm"],
   "author": "Nodash Team",
   "license": "MIT",
   "dependencies": {},
