feat: implement comprehensive testing with Vitest
- Add proper component testing for SDK with real usage scenarios
- Test actual built CLI executable from external perspective
- Create comprehensive MCP server tests with mock client
- Replace simple integration tests with proper unit/component tests
- Test SDK dual CommonJS/ESM builds and web compatibility
- Validate CLI commands, configuration, and error handling
- Test MCP server tool discovery, documentation access, and agent workflows
- Fix SDK baseUrl normalization bug discovered during testing
- Add proper test setup with mocks and environment configuration
- Remove old integration test files in favor of proper test suites

All packages now have robust test coverage testing actual artifacts.

--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "keywords": ["nodash", "cli", "developer-tools"],
   "author": "Nodash Team",
@@ -19,7 +21,8 @@
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "vitest": "^1.0.0"
   },
   "files": [
     "dist/**/*",
