chore: update package dependencies for npm publishing
- Update CLI and MCP packages to use published SDK version ^0.1.0
- Remove file:// dependencies in favor of npm registry versions
- Prepare packages for independent deployment and installation

--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -16,7 +16,7 @@
   "author": "Nodash Team",
   "license": "MIT",
   "dependencies": {
-    "@nodash/sdk": "file:../nodash-sdk",
+    "@nodash/sdk": "^0.1.0",
     "commander": "^11.0.0"
   },
   "devDependencies": {
