--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
   "scripts": {
     "build": "npm run build --workspaces",
     "dev": "npm run dev --workspaces",
-    "clean": "rm -rf packages/*/dist"
+    "clean": "rm -rf packages/*/dist",
+    "test": "npm run test --workspaces",
+    "test:run": "npm run test:run --workspaces",
+    "test:all": "node scripts/test-runner.js all",
+    "test:fast": "node scripts/test-runner.js fast",
+    "test:ci": "node scripts/test-runner.js ci",
+    "test:component": "npm run test:run --workspaces",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:e2e": "vitest run --config vitest.e2e.config.ts",
+    "typecheck": "npm run typecheck --workspaces --if-present",
+    "build:check": "npm run build --workspaces"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.0",
+    "@types/node": "^20.0.0",
+    "express": "^4.18.0",
+    "@types/express": "^4.17.0",
+    "concurrently": "^8.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
