--- a/packages/nodash-sdk/tsconfig.esm.json
+++ b/packages/nodash-sdk/tsconfig.esm.json
@@ -4,8 +4,9 @@
     "module": "ES2020",
     "lib": ["ES2020", "DOM"],
     "outDir": "./dist-esm",
-    "declaration": false,
-    "declarationMap": false
+    "composite": false,
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": ["node_modules", "dist", "dist-esm"]
 }
