fix(ci): add build step before typecheck and tests
- Add npm run build before typecheck in test, lint, and comprehensive jobs
- Fixes MODULE_NOT_FOUND errors for @nodash/sdk and missing CLI dist files
- Ensures packages are built before running TypeScript checks and integration tests
- Resolves CI failures while maintaining comprehensive test coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Build packages
+      run: npm run build
+      
     - name: Run TypeScript checks
       run: npm run typecheck
-      
-    - name: Run build verification
-      run: npm run build:check
       
     - name: Run component tests
       run: npm run test:component
@@ -71,6 +71,9 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
+      
+    - name: Build packages
+      run: npm run build
       
     - name: Check TypeScript types
       run: npm run typecheck
@@ -126,6 +129,9 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
+      
+    - name: Build packages
+      run: npm run build
       
     - name: Run comprehensive CI test suite
       run: npm run test:ci
