fix(build): correct package build order for dependencies
- Build SDK first (no dependencies)
- Build CLI second (depends on SDK)
- Build MCP last (depends on both SDK and CLI)
- Fixes TypeScript compilation errors in CI where packages tried to import unbuild dependencies
- Ensures proper dependency resolution in monorepo workspace builds

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "npm run build -w @nodash/sdk && npm run build -w @nodash/cli && npm run build -w @nodash/mcp",
     "dev": "npm run dev --workspaces",
     "clean": "rm -rf packages/*/dist",
     "test": "npm run test --workspaces",
