--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020", "DOM"],
+    "lib": [
+      "ES2020",
+      "DOM"
+    ],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -11,7 +14,6 @@
     "sourceMap": true,
     "noEmit": true
   },
-
   "include": [
     "packages/*/src/**/*"
   ],
@@ -20,6 +22,7 @@
     "**/dist",
     "**/node_modules",
     "tests/**/*",
-    "scripts/**/*"
+    "scripts/**/*",
+    "packages/nodash-mcp/**/*"
   ]
 }
