fix(build): resolve TypeScript build issues for CLI and MCP packages
- Add noEmit: false to CLI and MCP TypeScript configurations to ensure file emission
- Create dedicated tsconfig.build.json files for reliable package builds
- Update package.json build scripts to use separate build configurations
- Fix composite build issues that prevented dist/ directory generation
- Ensure consistent build process across all packages (SDK, CLI, MCP)

This resolves CI test failures where CLI and MCP packages were missing their
built dist/server.js and dist/cli.js files, causing all integration and
component tests to fail. All 72 tests now pass successfully.

Fixes: Missing module errors in test execution
Fixes: TypeScript composite build emission issues
Fixes: Inconsistent build configurations across packages

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:component": "npm run test:run --workspaces",
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
-    "typecheck": "npm run typecheck --workspaces --if-present",
+    "typecheck": "tsc --build",
     "build:check": "npm run build --workspaces"
   },
   "devDependencies": {
