--- a/packages/nodash-cli/tsconfig.build.json
+++ b/packages/nodash-cli/tsconfig.build.json
@@ -11,12 +11,9 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": true,
-    "composite": true,
-    "noEmit": false
+    "composite": false,
+    "incremental": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"],
-  "references": [
-    { "path": "../nodash-sdk" }
-  ]
+  "exclude": ["node_modules", "dist", "test"]
 }
