--- a/packages/nodash-mcp/tsconfig.build.json
+++ b/packages/nodash-mcp/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "lib": ["ES2020"],
     "outDir": "./dist",
     "rootDir": "./src",
@@ -11,12 +12,9 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "sourceMap": true,
-    "composite": true,
-    "noEmit": false
+    "composite": false,
+    "incremental": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"],
-  "references": [
-    { "path": "../nodash-sdk" }
-  ]
+  "exclude": ["node_modules", "dist", "test"]
 }
