--- a/packages/nodash-mcp/package.json
+++ b/packages/nodash-mcp/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "prebuild": "node scripts/bundle-docs.js",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "dev": "tsc --watch",
     "start": "node dist/server.js",
     "test": "vitest",
