--- a/packages/nodash-sdk/tsconfig.esm.json
+++ b/packages/nodash-sdk/tsconfig.esm.json
@@ -1,12 +1,19 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
     "module": "ES2020",
     "lib": ["ES2020", "DOM"],
     "outDir": "./dist-esm",
-    "composite": false,
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": false
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "dist-esm"]
 }
