--- a/packages/nodash-sdk/tsconfig.json
+++ b/packages/nodash-sdk/tsconfig.json
@@ -12,7 +12,9 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "composite": false
+    "composite": true,
+    "incremental": true,
+    "noEmit": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
