--- a/packages/nodash-cli/package.json
+++ b/packages/nodash-cli/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.0-beta.3"
   },
   "files": [
     "dist/**/*",
