--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -33,7 +33,7 @@
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.0.0",
-    "vitest": "^3.2.4",
+    "vitest": "^4.0.0-beta.3",
     "@types/node": "^20.0.0",
     "jsdom": "^23.0.0"
   },
